CSV File generated

--- a/review_scraper.ipynb
+++ b/review_scraper.ipynb
@@ -27,14 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Libraries\n",
     "from bs4 import BeautifulSoup as bs \n",
     "from urllib.request import urlopen as urReq\n",
-    "import requests"
+    "import requests\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -421,79 +422,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n",
-      "<class 'bs4.element.ResultSet'>\n"
+      "2 months ago\n",
+      "4 months ago\n",
+      "3 months ago\n",
+      "3 months ago\n",
+      "3 months ago\n",
+      "4 months ago\n",
+      "2 months ago\n",
+      "3 months ago\n",
+      "2 months ago\n",
+      "4 months ago\n"
      ]
     }
    ],
    "source": [
-    "comment_headers = []\n",
-    "ratings = []\n",
-    "customer_names = []\n",
-    "reviews =  []\n",
-    "dates = []\n",
-    "prices = []\n",
-    "for i in range(len(all_reviews)):\n",
-    "    print(type(all_reviews[i].find_all('p',{'class':\"_2-N8zT\"})))"
+    "for i in range(len(all_reviews)-1):\n",
+    "    print( all_reviews[i].div.find_all('p',{'class':'_2sc7ZR'})[1].text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(2,len(all_reviews)):\n",
-    "\n",
-    "    price = product_page3.find_all('div',{\"class\":\"_30jeq3 _16Jk6d\"})[0].text\n",
-    "    offer = product_page3.find_all('div',{\"class\":\"_1V_ZGU\"})[0].text\n",
-    "    highlights = product_page3.find_all('div',{\"class\":\"_2418kt\"})[0].text\n",
-    "    rating = all_reviews[i].text[0]\n",
-    "   \n",
-    "    customer_names = all_reviews[i].find_all('p',{\"class\":\"_2sc7ZR _2V5EHH\"})[0].text\n",
-    "    \n",
-    "    \n",
-    "    comment_head = all_reviews[i].find_all('p',{'class':\"_2-N8zT\"})[0].text\n",
-    "\n",
-    "    date_of_post = all_reviews[i].find_all('p',{'class':'_2sc7ZR'})[1].text\n",
-    "    \n",
-    "    review = all_reviews[i].div.find_all('div',{\"class\":\"\"})[0].div.text\n",
-    "    # print(review)\n",
-    "    print(f\"Customer Name: {customer_name} || Rating:\", rating)\n",
-    "    # print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AJAY SINGH'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Review By: Name \n",
-    "name = all_reviews[5].div.div.find_all('p',{\"class\":\"_2sc7ZR _2V5EHH\"})[0].text"
+    "name = all_reviews[5].div.div.find_all('p',{\"class\":\"_2sc7ZR _2V5EHH\"})[0].text\n",
+    "name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wonderful'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Review Header \n",
     "comment_header = all_reviews[5].find_all('p',{'class':\"_2-N8zT\"})[0].text\n",
@@ -502,29 +493,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Awesome'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Review \n",
-    "review = all_reviews[5].div.find_all('div',{\"class\":\"\"})[0].div.text"
+    "review = all_reviews[5].div.find_all('div',{\"class\":\"\"})[0].div.text\n",
+    "review"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4 months ago'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Date of Review Posted \n",
-    "date = all_reviews[5].div.find_all('p',{'class':'_2sc7ZR'})[1].text"
+    "date = all_reviews[5].div.find_all('p',{'class':'_2sc7ZR'})[1].text\n",
+    "date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'₹39,323'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Price for Product\n",
     "price = product_page3.find_all('div',{\"class\":\"_30jeq3 _16Jk6d\"})[0].text\n",
@@ -533,23 +559,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Extra ₹676 off'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Offer for the product \n",
-    "offer = product_page3.find_all('div',{\"class\":\"_1V_ZGU\"})\n",
+    "offer = product_page3.find_all('div',{\"class\":\"_1V_ZGU\"})[0].text\n",
     "offer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Display50MP Rear Camera | 16MP Front Camera5000 mAh Battery'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Product Highlights \n",
+    "highlight = product_page3.find_all('div',{\"class\":\"_2418kt\"})[0].text\n",
+    "highlight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Product Highlights \n",
-    "highlights = product_3_page.find_all('div',{\"class\":\"_2418kt\"})[0].text"
+    "# 2:12:17 \n",
+    "comment_headers = []\n",
+    "ratings = []\n",
+    "customer_names = []\n",
+    "reviews =  []\n",
+    "dates = []\n",
+    "prices = []\n",
+    "highlights = []\n",
+    "for i in range(len(all_reviews)-1):\n",
+    "    comment_headers.append(all_reviews[i].find_all('p',{'class':\"_2-N8zT\"})[0].text)\n",
+    "    reviews.append(all_reviews[i].div.find_all('div',{\"class\":\"\"})[0].div.text)\n",
+    "    ratings.append(all_reviews[i].text[0])\n",
+    "    customer_names.append(all_reviews[i].div.div.find_all('p',{\"class\":\"_2sc7ZR _2V5EHH\"})[0].text)\n",
+    "    dates.append(all_reviews[i].div.find_all('p',{'class':'_2sc7ZR'})[1].text)\n",
+    "    prices.append(product_page3.find_all('div',{\"class\":\"_30jeq3 _16Jk6d\"})[0].text)\n",
+    "    highlights.append(product_page3.find_all('div',{\"class\":\"_2418kt\"})[0].text)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>customer_name</th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>price</th>\n",
+       "      <th>highlight</th>\n",
+       "      <th>review</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2 months ago</td>\n",
+       "      <td>Asad Ansari</td>\n",
+       "      <td>Just wow!</td>\n",
+       "      <td>₹39,323</td>\n",
+       "      <td>8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...</td>\n",
+       "      <td>Overall good phoneIf you want a all rounder ph...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4 months ago</td>\n",
+       "      <td>pradeen boss</td>\n",
+       "      <td>Brilliant</td>\n",
+       "      <td>₹39,323</td>\n",
+       "      <td>8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...</td>\n",
+       "      <td>I have received from oneplus 11R 😍Its working ...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3 months ago</td>\n",
+       "      <td>Flipkart Customer</td>\n",
+       "      <td>Mind-blowing purchase</td>\n",
+       "      <td>₹39,323</td>\n",
+       "      <td>8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...</td>\n",
+       "      <td>Excellent Camera and Performance</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3 months ago</td>\n",
+       "      <td>Flipkart Customer</td>\n",
+       "      <td>Classy product</td>\n",
+       "      <td>₹39,323</td>\n",
+       "      <td>8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...</td>\n",
+       "      <td>So smooth display 😍😘</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3 months ago</td>\n",
+       "      <td>Srijin Customer</td>\n",
+       "      <td>Super!</td>\n",
+       "      <td>₹39,323</td>\n",
+       "      <td>8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...</td>\n",
+       "      <td>Awsm</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date      customer_name                Comment    price  \\\n",
+       "0  2 months ago        Asad Ansari              Just wow!  ₹39,323   \n",
+       "1  4 months ago       pradeen boss              Brilliant  ₹39,323   \n",
+       "2  3 months ago  Flipkart Customer  Mind-blowing purchase  ₹39,323   \n",
+       "3  3 months ago  Flipkart Customer         Classy product  ₹39,323   \n",
+       "4  3 months ago    Srijin Customer                 Super!  ₹39,323   \n",
+       "\n",
+       "                                           highlight  \\\n",
+       "0  8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...   \n",
+       "1  8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...   \n",
+       "2  8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...   \n",
+       "3  8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...   \n",
+       "4  8 GB RAM | 128 GB ROM17.02 cm (6.7 inch) Displ...   \n",
+       "\n",
+       "                                              review rating  \n",
+       "0  Overall good phoneIf you want a all rounder ph...      5  \n",
+       "1  I have received from oneplus 11R 😍Its working ...      5  \n",
+       "2                   Excellent Camera and Performance      5  \n",
+       "3                               So smooth display 😍😘      5  \n",
+       "4                                               Awsm      5  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_data = {\"date\":dates,\n",
+    "            \"customer_name\":customer_names,\n",
+    "            \n",
+    "            \"Comment\":comment_headers,\n",
+    "             \"price\":prices,\n",
+    "             \"highlight\":highlights,\n",
+    "             \"review\":reviews,\n",
+    "             \n",
+    "             \"rating\":ratings,\n",
+    "            }\n",
+    "\n",
+    "review_df = pd.DataFrame(dict_data)\n",
+    "review_df.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   date           10 non-null     object\n",
+      " 1   customer_name  10 non-null     object\n",
+      " 2   Comment        10 non-null     object\n",
+      " 3   price          10 non-null     object\n",
+      " 4   highlight      10 non-null     object\n",
+      " 5   review         10 non-null     object\n",
+      " 6   rating         10 non-null     object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 688.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "review_df.info()"
    ]
   },
   {
@@ -557,9 +796,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 1:36:17 \n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
